fixed minor bug with video play on mobile

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,7 +50,7 @@ h2,h3,h4,h5,h6,p,span{
     position:relative;
     z-index:0;
     width: 100%;
-    object-fit: fill;
+    object-fit: cover;
     opacity: .3;
   }
 
